[package]
name = "dls_simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33"
egui = "0.33"
egui_plot = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
ndarray = "0.17"
num-complex = "0.4"
rand = "0.9"
rand_distr = "0.5"
tokio = { version = "1.48", features = ["full"] }
genpdf = "0.2"
anyhow = "1"